--- a/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj
@@ -11,15 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Source\Dll.cpp" />
-    <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
+    <ClCompile Include="..\Source\Dll_Arena.cpp" />
+    <ClCompile Include="..\Source\UAlbertaBotModule_Arena.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\UAlbertaBotModule.h" />
+    <ClInclude Include="..\Source\UAlbertaBotModule_Arena.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>UAlbertaBot</ProjectName>
-    <ProjectGuid>{2E63AE74-758A-4607-9DE4-D28E814A6E13}</ProjectGuid>
+    <ProjectName>UAlbertaBot_Arena</ProjectName>
+    <ProjectGuid>{82F37540-2170-4174-9E7A-CCF3F00515CE}</ProjectGuid>
     <RootNamespace>ExampleAIModule</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
