--- a/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj.filters
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\Source\Dll.cpp" />
-    <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
+    <ClCompile Include="..\Source\Dll_Arena.cpp" />
+    <ClCompile Include="..\Source\UAlbertaBotModule_Arena.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\UAlbertaBotModule.h" />
+    <ClInclude Include="..\Source\UAlbertaBotModule_Arena.h" />
   </ItemGroup>
 </Project>
