--- a/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_Arena.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="..\Source\Dll_Arena.cpp" />
     <ClCompile Include="..\Source\UAlbertaBotModule_Arena.cpp" />
+    <ClCompile Include="..\Source\ArenaManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\UAlbertaBotModule_Arena.h" />
+    <ClInclude Include="..\Source\ArenaManager.h" />
   </ItemGroup>
 </Project>
